@@ -1,0 +1,9 @@
+<div class="d-flex justify-content-center align-items-center">
+    <div>
+        <div class="text-center pt-5 mt-5">
+            <span class="fas fa-file-invoice-dollar"></span>
+        </div>
+        <h4 class="my-4 text-center">Accounting</h4>
+        <p class="text-center">Coming Soon!</p>
+    </div>
+</div>
