@@ -1,4 +1,4 @@
-.fa-clipboard-list{
+.fa-file-invoice-dollar{
     font-size: 7rem;
     color: transparent;
     -webkit-text-fill-color: transparent;
