@@ -5,7 +5,7 @@
 </button>
 <button class="btn btn-sm btn-controller float-right" (click)="openCreateInvoiceModal()">
     <span class="fas fa-plus mr-lg-2 d-inline-block"></span>
-    <span *ngIf="!isMobileSize">Add New</span>
+    <span class="d-inline-block" *ngIf="!isMobileSize">Add New</span>
 </button>
 
 <div class="row no-gutters mb-2">
