@@ -1,0 +1,17 @@
+import { NgModule } from '@angular/core';
+import { CommonModule } from '@angular/common';
+
+import { AccountingRoutingModule } from './accounting-routing.module';
+import { AccountingComponent } from '@components/store/invoices/accounting/accounting.component';
+
+
+@NgModule({
+  declarations: [
+    AccountingComponent
+  ],
+  imports: [
+    CommonModule,
+    AccountingRoutingModule
+  ]
+})
+export class AccountingModule { }
