@@ -10,6 +10,7 @@
 .: WSM: Task: Mark order as self-pickup (WSM-257)
 .: WSM: Task: Make SKU as optional field (WSM-255)
 .: WSM: Task: Rename order to invoice (WSM-250)
+.: WSM: Task: Startup page for Order Module (WSM-256)
 
 ---------------------------------------------
 - 2020-12-26                                -
